src/objects/User.object
<CustomObject>
    <fields>
        <fullName>FSTR__Document_Merge_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_340</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Merge URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Ignore_PCE_Definition_Initiators__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for users that should not evaluate Definition Initiators.  This would typically be checked for an integration user that automatically updates data in the background and does not need to initiate processes.</inlineHelpText>
        <label>Ignore Definition Initiators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Notify_on_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field supports the ability to notify someone via task reminders that a new task has been assigned to them.</inlineHelpText>
        <label>Notify on Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Out_of_Office_End__c</fullName>
        <inlineHelpText>Select a date and time that your Out of Office will end.  During this time period all of your tasks will be assigned to the user designated in the Out of Office Replacement User field.</inlineHelpText>
        <label>Out of Office End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Out_of_Office_Replacement_User__c</fullName>
        <inlineHelpText>Select a user that will be assigned your tasks while you are out of the office</inlineHelpText>
        <label>Out of Office Replacement User</label>
        <relationshipName>Replaced_Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>FSTR__Out_of_Office_Start__c</fullName>
        <inlineHelpText>Select a date and time that your Out of Office will start.  During this time period all of your tasks will be assigned to the user designated in the Out of Office Replacement User field.</inlineHelpText>
        <label>Out of Office Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDCTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable All Duplicate Check triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ities_bsc__Birthday_Criteria__c</fullName>
        <description>Built by Interactive Ties (www.interactiveties.com/birthdays)</description>
        <label>Birthday Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Contacts</fullName>
                    <default>true</default>
                    <label>All Contacts</label>
                </value>
                <value>
                    <fullName>My Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ities_bsc__Birthday_Range__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Built by Interactive Ties (www.interactiveties.com/birthdays)</description>
        <label>Birthday Range</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Disable_Invitation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>user level to disable invitation email,this option is subject to org level setting</inlineHelpText>
        <label>Disable Invitation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Login_Type__c</fullName>
        <inlineHelpText>Specify Your Zoom Login Type</inlineHelpText>
        <label>Login Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>SSO</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                    <default>true</default>
                    <label>Work Email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Meeting_Password_Type__c</fullName>
        <defaultValue>3</defaultValue>
        <description>1: use PMI password for None PMI meeting;2: set a password for None PMI meeting;3: generate a random password for None PMI meeting</description>
        <label>Non-PMI Meeting Passcode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Secret_Token__c</fullName>
        <label>Secret Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Send_Email_to_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Provides an interface to send email to attendees while Launching Zoom Meeting from Start Zoom Meeting button.</inlineHelpText>
        <label>Send Email to Attendees at Launch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Send_ICS_in_Invitation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send ICalendar Attachment File in Meeting Invitation Email</description>
        <inlineHelpText>Send ICalendar Attachment File in Meeting Invitation Email</inlineHelpText>
        <label>Send ICS in Invitation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Webhook_URL__c</fullName>
        <inlineHelpText>Send a notification to Zoom IM Bot if the meeting that you have scheduled did not start within 3 mins of the start time</inlineHelpText>
        <label>Webhook Notification URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Password__c</fullName>
        <label>Zoom Meeting Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__isPMI_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable it if you want to use your Zoom PMI for creating instant meetings.</inlineHelpText>
        <label>PMI Enabled For Scheduled Meeting</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Aviation Portfolio Community Plus Login</value>
        </filters>
        <label>Community Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>